--- a/meetingroomservice/Dockerfile
+++ b/meetingroomservice/Dockerfile
@@ -3,4 +3,5 @@ ENV PYTHONUNBUFFERED 1
 
 ADD . /meetingroomservice
 WORKDIR /meetingroomservice
+RUN chmod +x wait-for-it.sh
 RUN pip install -r requirements.txt
